roco-gen/tests/templates/snapshots/generate[migration_file]@create_table_without_tz_migration.snap
---
source: roco-gen/tests/templates/migration.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
snapshot_kind: text
---
use roco_rs::schema::*;
use sea_orm_migration::prelude::*;

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        create_table_without_timestamps(m, "movies",
            &[
            
            ("id", ColType::PkAuto),
            
            ("title", ColType::StringNull),
            ],
            &[
            ("user", ""),
            ]
        ).await
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        drop_table(m, "movies").await
    }
}
