roco-gen/tests/templates/snapshots/generate[migration_file]@model.snap
---
source: roco-gen/tests/templates/model.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
---
use roco_rs::schema::*;
use sea_orm_migration::prelude::*;

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        create_table(m, "movies",
            &[
            
            ("id", ColType::PkAuto),
            
            ("title", ColType::StringNull),
            ],
            &[
            ]
        ).await
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        drop_table(m, "movies").await
    }
}
